--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              
+
             ]
           },
           "configurations": {
@@ -36,8 +36,8 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumError": "8kb",
+                  "maximumWarning": "2kb"
                 },
                 {
                   "type": "anyComponentStyle",
