--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,9 +14,9 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3  # Use the latest version
         with:
-          node-version: 14
+          node-version: 16  # Use Node.js version 16
 
       - name: Install Dependencies
         run: npm install
