--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,10 +13,11 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v3  # Use the latest version
+      - name: Setup Node.js and Angular CLI
+        uses: actions/setup-node@v3
         with:
-          node-version: 16  # Use Node.js version 16
+          node-version: 16
+      - run: npm install -g @angular/cli
 
       - name: Install Dependencies
         run: npm install
